Add branch fetching Introduce RepositoryController and RepositoryService

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -2,5 +2,6 @@
 
 #GitHub Client
 github.GitHubClient.userNotFound=No user found with the provided username in the external data source.
-github.GitHubClient.getRepositories.error=Error occurred while trying to fetch repositories information from an external data source.
-github.GitHubClient.getRepositories.timeout=Connection to the external data source timed out.
+github.GitHubClient.getRepositories.error=Error occurred while trying to fetch repositories data from an external data source.
+github.GitHubClient.repositoryNotFound=No repository found with the provided username in the external data source.
+github.GitHubClient.getBranches.error=Error occurred while trying to fetch branches data from an external data source.
