fix general error message

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,4 +1,4 @@
-"general.error"=An unexpected error occurred.
+general.error=An unexpected error occurred.
 
 #GitHub Client
 github.GitHubClient.userNotFound=No user found with the provided username in the external data source.
